--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ harness = false
 
 [features]
 default = ["kms", "x11", "x11-dlopen", "wayland", "wayland-dlopen"]
-kms = ["bytemuck", "drm", "drm-sys", "nix"]
+kms = ["bytemuck", "drm", "nix"]
 wayland = ["wayland-backend", "wayland-client", "memmap2", "nix", "fastrand"]
 wayland-dlopen = ["wayland-sys/dlopen"]
 x11 = ["as-raw-xcb-connection", "bytemuck", "nix", "tiny-xlib", "x11rb"]
@@ -31,10 +31,9 @@ raw-window-handle = "0.5.0"
 [target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dependencies]
 as-raw-xcb-connection = { version = "1.0.0", optional = true }
 bytemuck = { version = "1.12.3", optional = true }
-drm = { version = "0.9.0", default-features = false, optional = true }
-drm-sys = { version = "0.4.0", default-features = false, optional = true }
+drm = { version = "0.10.0", default-features = false, optional = true }
 memmap2 = { version = "0.9.0", optional = true }
-nix = { version = "0.26.1", optional = true }
+nix = { version = "0.27.0", features = ["fs", "mman"], optional = true }
 tiny-xlib = { version = "0.2.1", optional = true }
 wayland-backend = { version = "0.3.0", features = ["client_system"], optional = true }
 wayland-client = { version = "0.31.0", optional = true }
