--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ harness = false
 
 [features]
 default = ["kms", "x11", "x11-dlopen", "wayland", "wayland-dlopen"]
-kms = ["bytemuck", "drm", "nix"]
-wayland = ["wayland-backend", "wayland-client", "memmap2", "nix", "fastrand"]
+kms = ["bytemuck", "drm", "libc", "rustix"]
+wayland = ["wayland-backend", "wayland-client", "memmap2", "rustix", "fastrand"]
 wayland-dlopen = ["wayland-sys/dlopen"]
-x11 = ["as-raw-xcb-connection", "bytemuck", "nix", "tiny-xlib", "x11rb"]
+x11 = ["as-raw-xcb-connection", "bytemuck", "libc", "rustix", "tiny-xlib", "x11rb"]
 x11-dlopen = ["tiny-xlib/dlopen", "x11rb/dl-libxcb"]
 
 [dependencies]
@@ -33,7 +33,8 @@ as-raw-xcb-connection = { version = "1.0.0", optional = true }
 bytemuck = { version = "1.12.3", optional = true }
 drm = { version = "0.10.0", default-features = false, optional = true }
 memmap2 = { version = "0.9.0", optional = true }
-nix = { version = "0.27.0", features = ["fs", "mman"], optional = true }
+libc = { version = "0.2.149", optional = true }
+rustix = { version = "0.38.19", features = ["fs", "mm", "shm"], optional = true }
 tiny-xlib = { version = "0.2.1", optional = true }
 wayland-backend = { version = "0.3.0", features = ["client_system"], optional = true }
 wayland-client = { version = "0.31.0", optional = true }
