--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,7 +79,7 @@ cfg_aliases = "0.1.1"
 colorous = "1.0.12"
 criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
 instant = "0.1.12"
-winit = "0.29.0-beta.0"
+winit = "0.29.2"
 winit-test = "0.1.0"
 
 [dev-dependencies.image]
