--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,9 +79,9 @@ jobs:
         targets: ${{ matrix.platform.target }}
         components: clippy, rust-src
 
-    - name: Install libwayland
+    - name: Install libwayland and xkbcommon
       if: (matrix.platform.os == 'ubuntu-latest')
-      run: sudo apt-get update && sudo apt-get install libwayland-dev
+      run: sudo apt-get update && sudo apt-get install libwayland-dev libxkbcommon-x11-dev
 
     - name: Install GCC Multilib
       if: (matrix.platform.os == 'ubuntu-latest') && contains(matrix.platform.target, 'i686')
