--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,8 @@ on:
     branches: [master]
 
 jobs:
-  Check_Formatting:
+  fmt:
+    name: Tidy Code
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -16,9 +17,17 @@ jobs:
         components: rustfmt
     - name: Check Formatting
       run: cargo +stable fmt --all -- --check
+    - uses: taiki-e/install-action@v2 
+      with:
+        tool: typos-cli
+    - name: Check Formatting
+      run: cargo fmt --all -- --check
+    - name: Run Typos
+      run: typos
 
   miri-tests:
     runs-on: ubuntu-latest
+    needs: fmt
     steps:
     - uses: actions/checkout@v4
     - uses: hecrj/setup-rust-action@v2
@@ -30,6 +39,7 @@ jobs:
 
   tests:
     name: Tests
+    needs: fmt
     strategy:
       fail-fast: false
       matrix:
