--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,10 +47,12 @@ features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundat
 
 [target.'cfg(target_os = "macos")'.dependencies]
 bytemuck = { version = "1.12.3", features = ["extern_crate_alloc"] }
-cocoa = "0.25.0"
 core-graphics = "0.23.1"
 foreign-types = "0.5.0"
-objc = "0.2.7"
+objc2 = "0.5.1"
+objc2-foundation = { version = "0.2.0", features = ["NSThread"] }
+objc2-app-kit = { version = "0.2.0", features = ["NSResponder", "NSView", "NSWindow"] }
+objc2-quartz-core = { version = "0.2.0", features = ["CALayer", "CATransaction"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.63"
@@ -119,4 +121,3 @@ targets = [
     "x86_64-unknown-linux-gnu",
     "wasm32-unknown-unknown",
 ]
-
