--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ bytemuck = { version = "1.12.3", features = ["extern_crate_alloc"] }
 core-graphics = "0.23.1"
 foreign-types = "0.5.0"
 objc2 = "0.5.1"
-objc2-foundation = { version = "0.2.0", features = ["NSThread"] }
+objc2-foundation = { version = "0.2.0", features = ["dispatch", "NSThread"] }
 objc2-app-kit = { version = "0.2.0", features = ["NSResponder", "NSView", "NSWindow"] }
 objc2-quartz-core = { version = "0.2.0", features = ["CALayer", "CATransaction"] }
 
