--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ harness = false
 
 [features]
 default = ["kms", "x11", "x11-dlopen", "wayland", "wayland-dlopen","compatibility"]
-kms = ["bytemuck", "drm", "rustix"]
+kms = ["drm", "rustix"]
 wayland = ["wayland-backend", "wayland-client", "wayland-sys", "memmap2", "rustix", "fastrand"]
 wayland-dlopen = ["wayland-sys/dlopen"]
-x11 = ["as-raw-xcb-connection", "bytemuck", "fastrand", "rustix", "tiny-xlib", "x11rb"]
+x11 = ["as-raw-xcb-connection", "fastrand", "rustix", "tiny-xlib", "x11rb"]
 x11-dlopen = ["tiny-xlib/dlopen", "x11rb/dl-libxcb"]
 compatibility = []
 
@@ -29,11 +29,11 @@ compatibility = []
 log = "0.4.17"
 raw_window_handle = { package = "raw-window-handle", version = "0.6", features = ["std"] }
 num = "0.4.3"
-duplicate = "1.0.0"
+bytemuck = "1.12.3"
 
 [target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dependencies]
 as-raw-xcb-connection = { version = "1.0.0", optional = true }
-bytemuck = { version = "1.12.3", optional = true }
+# bytemuck = { version = "1.12.3", optional = true }
 drm = { version = "0.12.0", default-features = false, optional = true }
 fastrand = { version = "2.0.0", optional = true }
 memmap2 = { version = "0.9.0", optional = true }
@@ -91,6 +91,7 @@ colorous = "1.0.12"
 criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
 web-time = "1.0.0"
 winit = "0.30.0"
+tiny-skia = "0.11.4"
 
 [dev-dependencies.image]
 version = "0.25.0"
