--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/rust-windowing/softbuffer"
 keywords = ["framebuffer", "windowing"]
 categories = ["game-development", "graphics", "gui", "multimedia", "rendering"]
 exclude = ["examples"]
-rust-version = "1.70.0"
+rust-version = "1.71.0"
 
 [[bench]]
 name = "buffer_mut"
@@ -19,13 +19,29 @@ harness = false
 [features]
 default = ["kms", "x11", "x11-dlopen", "wayland", "wayland-dlopen"]
 kms = ["bytemuck", "drm", "rustix"]
-wayland = ["wayland-backend", "wayland-client", "wayland-sys", "memmap2", "rustix", "fastrand"]
+wayland = [
+    "wayland-backend",
+    "wayland-client",
+    "wayland-sys",
+    "memmap2",
+    "rustix",
+    "fastrand",
+]
 wayland-dlopen = ["wayland-sys/dlopen"]
-x11 = ["as-raw-xcb-connection", "bytemuck", "fastrand", "rustix", "tiny-xlib", "x11rb"]
+x11 = [
+    "as-raw-xcb-connection",
+    "bytemuck",
+    "fastrand",
+    "rustix",
+    "tiny-xlib",
+    "x11rb",
+]
 x11-dlopen = ["tiny-xlib/dlopen", "x11rb/dl-libxcb"]
 
 [dependencies]
-raw_window_handle = { package = "raw-window-handle", version = "0.6", features = ["std"] }
+raw_window_handle = { package = "raw-window-handle", version = "0.6", features = [
+    "std",
+] }
 tracing = { version = "0.1.41", default-features = false }
 
 [target.'cfg(target_os = "android")'.dependencies]
@@ -38,23 +54,48 @@ bytemuck = { version = "1.12.3", optional = true }
 drm = { version = "0.14.1", default-features = false, optional = true }
 fastrand = { version = "2.0.0", optional = true }
 memmap2 = { version = "0.9.0", optional = true }
-rustix = { version = "0.38.19", features = ["fs", "mm", "shm", "std"], default-features = false, optional = true }
+rustix = { version = "0.38.19", features = [
+    "fs",
+    "mm",
+    "shm",
+    "std",
+], default-features = false, optional = true }
 tiny-xlib = { version = "0.2.1", optional = true }
-wayland-backend = { version = "0.3.0", features = ["client_system"], optional = true }
+wayland-backend = { version = "0.3.0", features = [
+    "client_system",
+], optional = true }
 wayland-client = { version = "0.31.0", optional = true }
 wayland-sys = { version = "0.31.0", optional = true }
-x11rb = { version = "0.13.0", features = ["allow-unsafe-code", "shm"], optional = true }
+x11rb = { version = "0.13.0", features = [
+    "allow-unsafe-code",
+    "shm",
+], optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies.windows-sys]
 version = "0.59.0"
-features = ["Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
+features = [
+    "Win32_Graphics_Gdi",
+    "Win32_UI_Shell",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Foundation",
+]
 
 [target.'cfg(target_vendor = "apple")'.dependencies]
-bytemuck = { version = "1.12.3", features = ["extern_crate_alloc"] }
-core-graphics = "0.24.0"
-foreign-types = "0.5.0"
-objc2 = "0.5.2"
-objc2-foundation = { version = "0.2.2", features = [
+objc2-core-graphics = { version = "0.3.0", default-features = false, features = [
+    "std",
+    "objc2",
+    "CGColorSpace",
+    "CGDataProvider",
+    "CGImage",
+] }
+objc2 = "0.6.0"
+objc2-core-foundation = { version = "0.3.0", default-features = false, features = [
+    "std",
+    "CFCGTypes",
+] }
+objc2-foundation = { version = "0.3.0", default-features = false, features = [
+    "std",
+    "objc2-core-foundation",
     "NSDictionary",
     "NSGeometry",
     "NSKeyValueObserving",
@@ -62,7 +103,12 @@ objc2-foundation = { version = "0.2.2", features = [
     "NSThread",
     "NSValue",
 ] }
-objc2-quartz-core = { version = "0.2.2", features = ["CALayer", "CATransaction"] }
+objc2-quartz-core = { version = "0.3.0", default-features = false, features = [
+    "std",
+    "objc2-core-foundation",
+    "CALayer",
+    "CATransaction",
+] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.63"
@@ -89,7 +135,9 @@ cfg_aliases = "0.2.0"
 
 [dev-dependencies]
 colorous = "1.0.12"
-criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }
+criterion = { version = "0.4.0", default-features = false, features = [
+    "cargo_bench_support",
+] }
 web-time = "1.0.0"
 winit = "0.30.0"
 
@@ -114,9 +162,7 @@ wasm-bindgen-test = "0.3"
 rustix = { version = "0.38.8", features = ["event"] }
 
 [workspace]
-members = [
-    "run-wasm",
-]
+members = ["run-wasm"]
 
 [[example]]
 # Run with `cargo apk r --example winit_android`
