--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ tracing = { version = "0.1.41", default-features = false }
 bytemuck = "1.12.3"
 ndk = "0.9.0"
 
-[target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dependencies]
+[target.'cfg(not(any(target_os = "android", target_vendor = "apple", target_os = "redox", target_family = "wasm", target_os = "windows")))'.dependencies]
 as-raw-xcb-connection = { version = "1.0.0", optional = true }
 bytemuck = { version = "1.12.3", optional = true }
 drm = { version = "0.14.1", default-features = false, optional = true }
@@ -130,9 +130,6 @@ features = [
 [target.'cfg(target_os = "redox")'.dependencies]
 redox_syscall = "0.5"
 
-[build-dependencies]
-cfg_aliases = "0.2.0"
-
 [dev-dependencies]
 colorous = "1.0.12"
 criterion = { version = "0.4.0", default-features = false, features = [
@@ -158,7 +155,7 @@ rayon = "1.5.1"
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = "0.3"
 
-[target.'cfg(all(unix, not(any(target_vendor = "apple", target_os = "android", target_os = "redox"))))'.dev-dependencies]
+[target.'cfg(not(any(target_os = "android", target_vendor = "apple", target_os = "redox", target_family = "wasm", target_os = "windows")))'.dev-dependencies]
 rustix = { version = "1.0.1", features = ["event"] }
 
 [workspace]
