--- a/Cargo.toml
+++ b/Cargo.toml
@@ -154,6 +154,7 @@ criterion = { version = "0.8.1", default-features = false, features = [
 
 [target.'cfg(target_family = "wasm")'.dev-dependencies]
 wasm-bindgen-test = "0.3"
+console_error_panic_hook = "0.1"
 
 [target.'cfg(not(any(target_os = "android", target_vendor = "apple", target_os = "redox", target_family = "wasm", target_os = "windows")))'.dev-dependencies]
 rustix = { version = "1.0.1", features = ["event"] }
